--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple card game",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "nodemon server/test.js && (cd client && npm run build)",
+    "server": "nodemon server/test.js",
+    "client": "cd client && npm run build  && (cd ..)"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
